chore: update publishConfig to use GitHub npm registry for eslint, prettier, and tsconfig packages

--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -4,7 +4,7 @@
   "exports": "./index.js",
   "license": "MIT",
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com/"
   },
   "peerDependencies": {
     "prettier": ">=3.0.0"
