--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -2,7 +2,7 @@
   "name": "@timkinsman/tsconfig",
   "version": "1.0.0",
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com/"
   },
   "files": [
     "base.json",
